[gd_scene load_steps=13 format=3 uid="uid://ixxttem1r4dk"]

[ext_resource type="Script" uid="uid://dsgdluckg6457" path="res://scenes/Game/game.gd" id="1_fc1p2"]
[ext_resource type="PackedScene" uid="uid://cx4u6qiq4a5cu" path="res://scenes/UI/area_title.tscn" id="1_jm17p"]
[ext_resource type="PackedScene" uid="uid://csbabgagapm26" path="res://scenes/Entrance/entrance.tscn" id="2_fc1p2"]
[ext_resource type="Script" uid="uid://c2jrbkx7d7wc1" path="res://scenes/Camera/camera.gd" id="3_bfxw3"]
[ext_resource type="PackedScene" uid="uid://c31uh3spjtbeu" path="res://scenes/CreativeStudio/creative_studio.tscn" id="5_7dfdq"]
[ext_resource type="PackedScene" uid="uid://47ncokraoa05" path="res://scenes/student/student.tscn" id="6_54y65"]
[ext_resource type="PackedScene" uid="uid://dut01awwrx3x1" path="res://scenes/Pixelarium/pixelarium.tscn" id="6_t5wam"]
[ext_resource type="PackedScene" uid="uid://0i31f8vq3n8d" path="res://scenes/LabProg/lab_prog.tscn" id="7_1p5ji"]
[ext_resource type="PackedScene" uid="uid://b4vpkvnqqk80o" path="res://scenes/HallOfFame/hall_of_fame.tscn" id="9_rwo3j"]

[sub_resource type="Animation" id="Animation_fs5lk"]
resource_name = "Enter_Scene"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Student")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["walk_in"],
"method": &"play_cutscene_animation"
}, {
"args": [],
"method": &"stop_cutscene_animation"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Student:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-56, 448), Vector2(96, 448)]
}

[sub_resource type="Animation" id="Animation_rx8e1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Student:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 448)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rx8e1"]
_data = {
&"Enter_Scene": SubResource("Animation_fs5lk"),
&"RESET": SubResource("Animation_rx8e1")
}

[node name="Game" type="Node2D" node_paths=PackedStringArray("camera", "player")]
script = ExtResource("1_fc1p2")
camera = NodePath("Camera2D")
player = NodePath("Student")

[node name="AreaTitle" parent="." instance=ExtResource("1_jm17p")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)
position_smoothing_enabled = true
script = ExtResource("3_bfxw3")

[node name="Entrance" parent="." instance=ExtResource("2_fc1p2")]

[node name="creative_studio" parent="." node_paths=PackedStringArray("player", "camera") instance=ExtResource("5_7dfdq")]
position = Vector2(640, 0)
player = NodePath("../Student")
camera = NodePath("../Camera2D")

[node name="Pixelarium" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("6_t5wam")]
position = Vector2(1280, 0)
camera = NodePath("../Camera2D")

[node name="LabProg" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("7_1p5ji")]
position = Vector2(1920, 0)
camera = NodePath("../Camera2D")

[node name="HallOfFame" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("9_rwo3j")]
position = Vector2(2560, 0)
camera = NodePath("../Camera2D")

[node name="Student" parent="." instance=ExtResource("6_54y65")]
position = Vector2(32, 448)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rx8e1")
}
autoplay = "Enter_Scene"

[connection signal="new_area_entered" from="Entrance" to="AreaTitle" method="_on_show_area_title"]
[connection signal="stop_talking" from="Entrance" to="." method="_on_stop_talking"]
[connection signal="talking" from="Entrance" to="." method="_on_talking"]
[connection signal="disable_previous" from="creative_studio" to="Entrance" method="_on_creative_studio_disable_previous"]
[connection signal="new_area_entered" from="creative_studio" to="AreaTitle" method="_on_show_area_title"]
[connection signal="shake_camera" from="creative_studio" to="." method="_on_shake_camera"]
[connection signal="stop_talking" from="creative_studio" to="." method="_on_stop_talking"]
[connection signal="talking" from="creative_studio" to="." method="_on_talking"]
[connection signal="disable_previous" from="Pixelarium" to="creative_studio" method="_on_pixelarium_disable_previous"]
[connection signal="new_area_entered" from="Pixelarium" to="AreaTitle" method="_on_show_area_title"]
[connection signal="shake_camera" from="Pixelarium" to="." method="_on_shake_camera"]
[connection signal="stop_talking" from="Pixelarium" to="." method="_on_stop_talking"]
[connection signal="talking" from="Pixelarium" to="." method="_on_talking"]
[connection signal="disable_previous" from="LabProg" to="Pixelarium" method="_on_lab_prog_disable_previous"]
[connection signal="new_area_entered" from="LabProg" to="AreaTitle" method="_on_show_area_title"]
[connection signal="shake_camera" from="LabProg" to="." method="_on_shake_camera"]
[connection signal="stop_talking" from="LabProg" to="." method="_on_stop_talking"]
[connection signal="talking" from="LabProg" to="." method="_on_talking"]
[connection signal="disable_previous" from="HallOfFame" to="LabProg" method="_on_hall_of_fame_disable_previous"]
[connection signal="new_area_entered" from="HallOfFame" to="AreaTitle" method="_on_show_area_title"]
[connection signal="stop_talking" from="HallOfFame" to="." method="_on_stop_talking"]
[connection signal="talking" from="HallOfFame" to="." method="_on_talking"]
[connection signal="damaged" from="Student" to="." method="_on_student_damaged"]
[connection signal="animation_finished" from="AnimationPlayer" to="Entrance" method="_on_animation_player_animation_finished"]
